Incluindo JRE com JavaFX
Incluindo JRE com JavaFX e corringindo erros de ortografia